Transformed the testimonies section and fixed z-indexes

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,21 @@ body {
     font-family: "Montserrat", sans-serif;
 } 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
-h1 {
+h1{
     font-family: "Montserrat", sans-serif;
     font-size: 3.5rem;
     line-height: 1.5;
 }
+h2 {
+    font-family: "Montserrat-Bold", sans-serif;
+    font-size: 3rem;
+    line-height: 1.5;
+}
 h3 {
     font-family: "Montserrat", sans-serif;
+    font-size: 1.5rem;
 }
 p {
     color: #8f8f8f;
@@ -47,15 +53,22 @@ p {
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
+}
+#iphone6 {
+    position: relative;
 }
 
 /* Features Section  */
 #features {
+    position: relative;
     padding: 7% 15%;
+    background-color: white;
 }
 .feature-box {
     text-align: center;
-    padding: 5%;
+    padding: 4.5%;
 }
 .feature-icons {
     color: #ef8172;
@@ -63,4 +76,44 @@ p {
 }
 .feature-icons:hover {
     color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+    
+    text-align: center;
+    background-color: #ef8172;
+    color: white;
+}
+
+.dog-img {
+    border-radius: 100%;
+    width: 10%;
+    margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
+}
+
+/* Press Section */
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+
+#pricing {
+    text-align: center;
+    padding: 100px;
+}
+
+.price-col {
+    padding: 3% 2%;
 }
